--- a/MainTex.tex
+++ b/MainTex.tex
@@ -106,7 +106,7 @@ As a side note, we were able to outsource some of our art to an external 2D arti
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[scale=0.1]{ShipArt}
+	%\includegraphics[scale=0.1]{ShipArt}
 	\caption{Artwork of a ship from Fall of Criton. Courtesy of Nanna Steffensen.}
 	\label{ArtShip}
 \end{figure}
