added report structure

--- a/MainTex.tex
+++ b/MainTex.tex
@@ -44,16 +44,27 @@ Noor Shaker\\
 
 \tableofcontents
 \pagebreak
-\section{Fall of Criton - Turn-based strategy game}
+\section{Introduction}
+\subsection{Data selection}
+\subsection{Research question}
+\subsection{Tools for data mining}
 
+\section{Data mining}
+\subsection{Preprocessing}
+\subsection{Classification tree}
+\subsubsection{Cross Validation}
+\subsection{K-means Clustering}
+\subsubsection{Data validation}
 
-\section{Derp 1}
-\begin{figure}[h]
-	\centering
+\section{Conclusion}
+\subsection{Societal impact}
+
+%\begin{figure}[h]
+%	\centering
 	%\includegraphics[scale=0.1]{ShipArt}
-	\caption{Artwork of a ship from Fall of Criton. Courtesy of Nanna Steffensen.}
-	\label{ArtShip}
-\end{figure}
+%	\caption{Artwork of a ship from Fall of Criton. Courtesy of Nanna Steffensen.}
+%	\label{ArtShip}
+%\end{figure}
 
 
 \appendix
