--- a/MainTex.tex
+++ b/MainTex.tex
@@ -46,8 +46,26 @@ Noor Shaker\\
 \pagebreak
 \section{Introduction}
 \subsection{Data selection}
+
 \subsection{Research question}
+Our primary question which we want answered was:\\
+\textit{"Which attributes contributes mostly to the survival rate of a passenger on the Titanic}\\
+Here we wished to figure out what set of parameters would ensure the highest rate of survival on the Titanic. We would use classification through a classification tree to figure out which set gives the highest percentage of survival.
+
+The secondary question arose when looking at clusters of the data.\\
+\textit{"Which societal data can be found in clusters of the titanic data"}\\
+Looking at the data, we decide to try clustering to see if there was an emergent pattern. It would be interesting to see if the were a relation between wealth and number of children and the like. 
 \subsection{Tools for data mining}
+We choose to use the free tool called Orange\cite{orange}. This tool allowed to quickly manipulate the data, such that we could extract the interesting elements. 
+In the tool you manipulate the data by clicking and drawing connections between data elements and processing methods. Before explaining further, we have included the map of the process used for our data set in the orange framework, see figure \ref{OrangeMap}.
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[scale=0.35]{orangeMap}
+	\caption{The map of the methods and processes used on the data.}
+	\label{OrangeMap}
+\end{figure}
+
 
 \section{Data mining}
 \subsection{Preprocessing}
@@ -59,21 +77,16 @@ Noor Shaker\\
 \section{Conclusion}
 \subsection{Societal impact}
 
-%\begin{figure}[h]
-%	\centering
-	%\includegraphics[scale=0.1]{ShipArt}
-%	\caption{Artwork of a ship from Fall of Criton. Courtesy of Nanna Steffensen.}
-%	\label{ArtShip}
-%\end{figure}
+
 
 
 \appendix
 \begin{thebibliography}{9}
 
-\bibitem{batgotwiki}
-  \emph{Battlefleet Gothic},
-  http://en.wikipedia.org/wiki/Battlefleet\_Gothic,
-  12-05-15
+\bibitem{orange}
+  \emph{Orange Data Mining},
+  http://orange.biolab.si/,
+  13-05-15
   
 \bibitem{eveonline}
   \emph{EVE online},
