added pictures for cluster 2

--- a/MainTex.tex
+++ b/MainTex.tex
@@ -46,7 +46,8 @@ Noor Shaker\\
 \pagebreak
 \section{Introduction}
 \subsection{Data selection}
-We have worked on a data set regarding the passengers on the titanic. The data structure is presented in table \ref{titanData} with a short name and the value type associated with the variable.
+We have worked on a data set regarding the passengers on the titanic. The data structure is presented in table \ref{titanData} with a short name and the value type associated with the variable. 
+The type binary and binary string, means there is only two options, the first of the types is based on numeric binary data, whilst the second is based on string data. The value type attribute table covers three options. The 
 \begin{table}[h]
 \begin{tabular}{|l|l|l|}
 \hline
@@ -65,9 +66,10 @@ cabin & Cabin & string\\
 embarked & Port of Embarkation & attribute table\\
 \hline
 \end{tabular}
-\caption{Titanic data set variables with short description and classification}
+\caption{Titanic data set variables with short description and classification.}
 \label{titanData}
 \end{table}
+
 VARIABLE DESCRIPTIONS:
 survival        Survival
                 (0 = No; 1 = Yes)
