--- a/MainTex.tex
+++ b/MainTex.tex
@@ -132,6 +132,30 @@ In the tool you manipulate the data by clicking and drawing connections between 
 \subsection{Classification tree}
 \subsubsection{Cross Validation}
 \subsection{K-means Clustering}
+\begin{figure}[h]
+	\centering
+	\begin{flushleft}
+		\includegraphics[scale=0.30]{ClusterDistribution/Cluster1/Sex}
+		\includegraphics[scale=0.30]{ClusterDistribution/Cluster1/PClass}\\
+		\includegraphics[scale=0.30]{ClusterDistribution/Cluster1/Embarked}
+		\includegraphics[scale=0.30]{ClusterDistribution/Cluster1/Fare}
+	\end{flushleft}
+	\caption{Cluster 1}
+	\label{ClusterOne}
+\end{figure}
+
+\begin{figure}[h]
+	\centering
+	\begin{flushleft}
+		\includegraphics[scale=0.30]{ClusterDistribution/Cluster2/Sex}
+		\includegraphics[scale=0.30]{ClusterDistribution/Cluster2/PClass}\\
+		\includegraphics[scale=0.30]{ClusterDistribution/Cluster2/Embarked}
+		\includegraphics[scale=0.30]{ClusterDistribution/Cluster2/Fare}
+	\end{flushleft}
+	\caption{Cluster 2}
+	\label{ClusterTwo}
+\end{figure}
+
 \subsubsection{Data validation}
 
 \section{Conclusion}
